✨ intro section 추가

--- a/index.html
+++ b/index.html
@@ -9,11 +9,30 @@
       href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Noto+Sans+KR:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="./assets/styles/css/index.css" />
     <title>FE 이윤슬 포트폴리오</title>
   </head>
   <body>
+    <main>
+      <section class="intro">
+        <header class="intro-header">
+          <h1 class="intro-title animated-text">
+            Welcome to my portfolio!<br />Explore my journey.
+          </h1>
+          <p class="intro-description">
+            환영합니다!
+            <br />
+            프론트엔드 개발자 이윤슬의 포트폴리오 사이트입니다.
+            <br />
+            이곳에서 저에 대해 자세히 알아가보세요.
+          </p>
+        </header>
+        <div class="intro-body">
+          <img src="./assets/images/intro.jpg" alt="바다 이미지" />
+        </div>
+      </section>
+    </main>
+
     <script type="module" src="./assets/apps/index.js"></script>
   </body>
 </html>
