--- a/index.html
+++ b/index.html
@@ -31,8 +31,78 @@
           <img src="./assets/images/intro.jpg" alt="바다 이미지" />
         </div>
       </section>
+      <section class="section about">
+        <header class="section-header">
+          <h2 class="section-title animated-text">About Me</h2>
+        </header>
+        <div class="section-body">
+          <h3 class="main-text">
+            코드를 통해 사용자와 만나고,
+            <br />
+            서비스의 가치를 전달하는 일을 즐기는
+            <br />
+            프론트엔드 개발자
+            <br />
+            이윤슬입니다.
+          </h3>
+          <div class="about-item-area">
+            <article class="about-item">
+              <h4 class="about-item-title fadein-item">
+                Lorem ipsum dolor sit amet
+              </h4>
+              <p class="about-item-description fadein-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Curabitur ultrices, leo vitae vehicula commodo, libero nibh
+                aliquet ligula, id malesuada quam risus vel odio. Donec in metus
+                sodales, vulputate felis feugiat, rutrum nunc. Maecenas et
+                mauris sem. Nulla facilisi. Etiam in pretium metus. Mauris sit
+                amet turpis in sapien dictum mattis quis at ante.
+                <br />
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Curabitur ultrices, leo vitae vehicula commodo, libero nibh
+                aliquet ligula, id malesuada quam risus vel odio. Donec in metus
+                sodales, vulputate felis feugiat, rutrum nunc. Maecenas et
+                mauris sem. Nulla facilisi. Etiam in pretium metus. Mauris sit
+                amet turpis in sapien dictum mattis quis at ante.
+              </p>
+            </article>
+            <article class="about-item">
+              <h4 class="about-item-title fadein-item">
+                Lorem ipsum dolor sit amet
+              </h4>
+              <p class="about-item-description fadein-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Curabitur ultrices, leo vitae vehicula commodo, libero nibh
+                aliquet ligula, id malesuada quam risus vel odio. Donec in metus
+                sodales, vulputate felis feugiat, rutrum nunc. Maecenas et
+                mauris sem. Nulla facilisi. Etiam in pretium metus. Mauris sit
+                amet turpis in sapien dictum mattis quis at ante.
+                <br />
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Curabitur ultrices, leo vitae vehicula commodo, libero nibh
+                aliquet ligula, id malesuada quam risus vel odio. Donec in metus
+                sodales, vulputate felis feugiat, rutrum nunc. Maecenas et
+                mauris sem. Nulla facilisi. Etiam in pretium metus. Mauris sit
+                amet turpis in sapien dictum mattis quis at ante.
+              </p>
+            </article>
+            <article class="about-item">
+              <h4 class="about-item-title fadein-item">
+                Lorem ipsum dolor sit amet
+              </h4>
+              <p class="about-item-description fadein-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Curabitur ultrices, leo vitae vehicula commodo, libero nibh
+                aliquet ligula, id malesuada quam risus vel odio. Donec in metus
+                sodales, vulputate felis feugiat, rutrum nunc. Maecenas et
+                mauris sem. Nulla facilisi. Etiam in pretium metus. Mauris sit
+                amet turpis in sapien dictum mattis quis at ante.
+              </p>
+            </article>
+          </div>
+        </div>
+      </section>
     </main>
-
     <script type="module" src="./assets/apps/index.js"></script>
   </body>
 </html>
