--- a/index.html
+++ b/index.html
@@ -102,6 +102,73 @@
           </div>
         </div>
       </section>
+      <section class="section skills">
+        <header class="section-header">
+          <h2 class="section-title animated-text">My Skills</h2>
+        </header>
+        <div class="section-body">
+          <div class="badge-area">
+            <div class="skill-badge">
+              <i class="icon-react"></i>
+              <h3 class="skill-card-title">React</h3>
+            </div>
+            <div class="skill-badge">
+              <i class="icon-next"></i>
+              <h3 class="skill-card-title">Next.js</h3>
+            </div>
+            <div class="skill-badge">
+              <i class="icon-typescript"></i>
+              <h3 class="skill-card-title">Typescript</h3>
+            </div>
+            <div class="skill-badge">
+              <i class="icon-javascript"></i>
+              <h3 class="skill-card-title">Javascript</h3>
+            </div>
+            <div class="skill-badge">
+              <i class="icon-html"></i>
+              <h3 class="skill-card-title">HTML</h3>
+            </div>
+            <div class="skill-badge">
+              <i class="icon-css"></i>
+              <h3 class="skill-card-title">CSS</h3>
+            </div>
+            <div class="skill-badge">
+              <i class="icon-react-query"></i>
+              <h3 class="skill-card-title">React Query</h3>
+            </div>
+          </div>
+          <ul class="description-list">
+            <li class="description-item">
+              <i class="icon-twinkle"></i>
+              <p>
+                유연하고 확장성 높은 React 컴포넌트를 설계하여 코드 재사용성을
+                높이고 사용자에게 일관된 UI 제공.
+              </p>
+            </li>
+            <li class="description-item">
+              <i class="icon-twinkle"></i>
+              <p>
+                Next.js의 Page Router, App Router 방식에서의 SSR을 활용하여초기
+                페이지 로딩 속도 향상 및 SEO 개선.
+              </p>
+            </li>
+            <li class="description-item">
+              <i class="icon-twinkle"></i>
+              <p>
+                타입스크립트를 통한 정적 타이핑을 통해 런타임 오류를 사전에
+                방지하여 프로덕트 안정성 향상.
+              </p>
+            </li>
+            <li class="description-item">
+              <i class="icon-twinkle"></i>
+              <p>
+                React Query를 통한 선언적 방식의 서버 상태 관리를 통해 코드
+                가독성 향상 및 useInfiniteQuery를 활용한 무한 스크롤 UI 구현.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <script type="module" src="./assets/apps/index.js"></script>
   </body>
