--- a/index.html
+++ b/index.html
@@ -169,6 +169,154 @@
           </ul>
         </div>
       </section>
+      <section class="section blog">
+        <header class="section-header">
+          <h2 class="section-title animated-text">Blog</h2>
+        </header>
+        <div class="section-body">
+          <div class="blog-intro">
+            <p class="main-text">
+              개발자로서 지속적으로 발전하기 위해
+              <br />
+              배운 지식을 기록하고 <br />개발 과정 속에서 겪은 어려움과 해결
+              방법을 공유하기 위한 <br />기술 블로그를 운영하고 있습니다.
+            </p>
+            <span class="view-more"
+              >블로그 보러가기
+              <i class="icon-arrow"></i>
+            </span>
+          </div>
+          <div class="blog-card-area">
+            <article class="blog-card">
+              <a href="">
+                <i class="icon-react"></i>
+                <div class="content-area">
+                  <h3 class="blog-card-title">UI-라이브러리-제작기</h3>
+                  <p class="blog-card-description">
+                    며칠 전 처음으로 UI 라이브러리를 만들고 npm에 배포까지
+                    해보았습니다. 이번 포스트에서는 UI 라이브러리를 만드는
+                    과정에 대해 이야기해 보도록 하겠습니다.
+                  </p>
+                </div>
+                <span class="created-at">2025/02/04</span>
+              </a>
+            </article>
+            <article class="blog-card">
+              <a href="">
+                <i class="icon-next"></i>
+                <div class="content-area">
+                  <h3 class="blog-card-title">
+                    스트리밍 적용해서 라우팅 속도 개선하기
+                  </h3>
+                  <p class="blog-card-description">
+                    이번 포스트에서는 넥스트 SSR의 한계와 스트리밍은 무엇인지,
+                    넥스트에서 스트리밍을 적용하는 방법에 대해서 알아보도록
+                    하겠습니다.
+                  </p>
+                </div>
+                <span class="created-at">2025/03/05</span>
+              </a>
+            </article>
+            <article class="blog-card">
+              <a href="">
+                <i class="icon-next"></i>
+                <div class="content-area">
+                  <h3 class="blog-card-title">
+                    넥스트 서버 사이드에서 쿠키에 접근하기
+                  </h3>
+                  <p class="blog-card-description">
+                    이번 포스트에서는 프로젝트를 진행하며 제 멘탈을 터트린
+                    문제에 관해 이야기해보겠습니다. 바로 넥스트 서버에서
+                    브라우저에 저장된 쿠키에 접근할 수 없었던 것인데요. 똑같은
+                    실수를 반복하지 않기 위해 에러의 원인을 찾고 해결 방법을
+                    적용했던 과정을 기록해 봅니다.
+                  </p>
+                </div>
+                <span class="created-at">2025/03/06</span>
+              </a>
+            </article>
+            <article class="blog-card">
+              <a href="">
+                <i class="icon-paint"></i>
+                <div class="content-area">
+                  <h3 class="blog-card-title">margin-left : auto 적용하기</h3>
+                  <p class="blog-card-description">
+                    프로젝트를 진행하던 중 버튼이 화면 오른쪽 끝에 배치되는
+                    레이아웃을 구현하게 됐습니다. 버튼을 오른쪽으로 밀기 위해
+                    margin-left : auto를 적용했지만 아무 일도 생기지 않았습니다.
+                  </p>
+                </div>
+                <span class="created-at">2025/03/06</span>
+              </a>
+            </article>
+            <article class="blog-card">
+              <a href="">
+                <i class="icon-paint"></i>
+                <div class="content-area">
+                  <h3 class="blog-card-title">
+                    focus-within 선택자로 폼 필드에 인터랙션 추가하기
+                  </h3>
+                  <p class="blog-card-description">
+                    혹시 현대카드 앱 써보셨나요? 현대카드 앱의 검색창을 보면
+                    포커스됐을 때 라인이 펼쳐지는 인터랙션을 볼 수 있습니다.
+                    꽤나 쿨한 인터랙션이라고 생각하고 있던 차에 새롭게 진행한
+                    프로젝트에 적용해 보면 좋겠다는 생각이 들었습니다. 이번
+                    포스트에서는 :focus-within 선택자를 사용하여 해당 인터랙션을
+                    구현한 이야기를 해보겠습니다.
+                  </p>
+                </div>
+                <span class="created-at">2025/03/06</span>
+              </a>
+            </article>
+            <article class="blog-card">
+              <a href="">
+                <i class="icon-internet"></i>
+                <div class="content-area">
+                  <h3 class="blog-card-title">주요 렌더링 경로 알아보기</h3>
+                  <p class="blog-card-description">
+                    CSS로 인터랙션을 구현할 때 width, position 속성값 대신
+                    transform 속성값을 사용하라는 이야기 들어보셨나요?
+                  </p>
+                </div>
+                <span class="created-at">2024/12/30</span>
+              </a>
+            </article>
+            <article class="blog-card">
+              <a href="">
+                <i class="icon-react"></i>
+                <div class="content-area">
+                  <h3 class="blog-card-title">
+                    ErrorBoundary로 에러 핸들링하기
+                  </h3>
+                  <p class="blog-card-description">
+                    혹시 웹 페이지의 특정 부분에서 발생한 에러로 인해 페이지
+                    전체가 죽는 경험을 해보셨나요? 이런 상황을 방지하기 위해
+                    리액트에서는 에러의 경계를 구분 지어 에러가 페이지 전체에
+                    영향을 미치지 않도록 할 수 있습니다.
+                  </p>
+                </div>
+                <span class="created-at">2024/12/28</span>
+              </a>
+            </article>
+            <article class="blog-card">
+              <a href="">
+                <i class="icon-cogwheel"></i>
+                <div class="content-area">
+                  <h3 class="blog-card-title">
+                    쓰로틀과 디바운스로 이벤트 최적화하기
+                  </h3>
+                  <p class="blog-card-description">
+                    프론트엔드 개발을 하다보면 DOM 이벤트를 자주 다루게 됩니다.
+                    특히, scroll, resize, form change와 같은 이벤트는 연속적으로
+                    발생해 함수를 매우 빈번하게 호출하게 됩니다.
+                  </p>
+                </div>
+                <span class="created-at">2024/09/26</span>
+              </a>
+            </article>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="./assets/apps/index.js"></script>
   </body>
