--- a/index.html
+++ b/index.html
@@ -560,6 +560,16 @@
           </div>
         </div>
       </section>
+      <section class="section ending">
+        <h2 class="section-title">
+          Thank you for visiting!
+          <br />
+          If you enjoyed exploring my journey,
+          <br />
+          contact me.
+        </h2>
+        <a href="mailto:ysisys0202@gmail.com">ysisys0202@gmail.com</a>
+      </section>
     </main>
     <script type="module" src="./assets/apps/index.js"></script>
   </body>
