--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Noto+Sans+KR:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/styles/css/index.css" />
+    <link rel="stylesheet" href="./src/styles/css/index.css" />
     <title>FE 이윤슬 포트폴리오</title>
   </head>
   <body>
@@ -571,6 +571,6 @@
         <a href="mailto:ysisys0202@gmail.com">ysisys0202@gmail.com</a>
       </section>
     </main>
-    <script type="module" src="./assets/apps/index.js"></script>
+    <script type="module" src="./src/apps/index.js"></script>
   </body>
 </html>
