🐛 intro 이미지 경로 수정

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </p>
         </header>
         <div class="intro-body">
-          <img src="./assets/images/intro.jpg" alt="바다 이미지" />
+          <img src="./public/images/intro.jpg" alt="바다 이미지" />
         </div>
       </section>
       <section class="section about">
