✨ intro section 인터랙션 추가

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
       <section class="intro">
         <header class="intro-header">
-          <h1 class="intro-title animated-text">
+          <h1 class="intro-title bounce-text">
             Welcome to my portfolio!<br />Explore my journey.
           </h1>
           <p class="intro-description">
