✨ section-title 애니메이션 추가

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </section>
       <section class="section about">
         <header class="section-header">
-          <h2 class="section-title animated-text">About Me</h2>
+          <h2 class="section-title bounce-text">About Me</h2>
         </header>
         <div class="section-body">
           <h3 class="main-text">
@@ -104,7 +104,7 @@
       </section>
       <section class="section skills">
         <header class="section-header">
-          <h2 class="section-title animated-text">My Skills</h2>
+          <h2 class="section-title bounce-text">My Skills</h2>
         </header>
         <div class="section-body">
           <div class="badge-area">
@@ -171,7 +171,7 @@
       </section>
       <section class="section projects">
         <header class="section-header">
-          <h2 class="section-title animated-text">Projects</h2>
+          <h2 class="section-title bounce-text">Projects</h2>
         </header>
         <div class="section-body">
           <article class="project-box">
@@ -414,7 +414,7 @@
       </section>
       <section class="section blog">
         <header class="section-header">
-          <h2 class="section-title animated-text">Blog</h2>
+          <h2 class="section-title bounce-text">Blog</h2>
         </header>
         <div class="section-body">
           <div class="blog-intro">
