✨ about 애니메이션 추가

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <h2 class="section-title bounce-text">About Me</h2>
         </header>
         <div class="section-body">
-          <h3 class="main-text">
+          <h3 class="main-text fadein-item">
             코드를 통해 사용자와 만나고,
             <br />
             서비스의 가치를 전달하는 일을 즐기는
@@ -46,11 +46,9 @@
             이윤슬입니다.
           </h3>
           <div class="about-item-area">
-            <article class="about-item">
-              <h4 class="about-item-title fadein-item">
-                Lorem ipsum dolor sit amet
-              </h4>
-              <p class="about-item-description fadein-item">
+            <article class="about-item fadein-item">
+              <h4 class="about-item-title">Lorem ipsum dolor sit amet</h4>
+              <p class="about-item-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Curabitur ultrices, leo vitae vehicula commodo, libero nibh
                 aliquet ligula, id malesuada quam risus vel odio. Donec in metus
@@ -66,11 +64,9 @@
                 amet turpis in sapien dictum mattis quis at ante.
               </p>
             </article>
-            <article class="about-item">
-              <h4 class="about-item-title fadein-item">
-                Lorem ipsum dolor sit amet
-              </h4>
-              <p class="about-item-description fadein-item">
+            <article class="about-item fadein-item">
+              <h4 class="about-item-title">Lorem ipsum dolor sit amet</h4>
+              <p class="about-item-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Curabitur ultrices, leo vitae vehicula commodo, libero nibh
                 aliquet ligula, id malesuada quam risus vel odio. Donec in metus
@@ -86,11 +82,9 @@
                 amet turpis in sapien dictum mattis quis at ante.
               </p>
             </article>
-            <article class="about-item">
-              <h4 class="about-item-title fadein-item">
-                Lorem ipsum dolor sit amet
-              </h4>
-              <p class="about-item-description fadein-item">
+            <article class="about-item fadein-item">
+              <h4 class="about-item-title">Lorem ipsum dolor sit amet</h4>
+              <p class="about-item-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Curabitur ultrices, leo vitae vehicula commodo, libero nibh
                 aliquet ligula, id malesuada quam risus vel odio. Donec in metus
