--- a/index.html
+++ b/index.html
@@ -169,239 +169,250 @@
         </header>
         <div class="section-body">
           <article class="project-box">
-            <h3 class="project-box-title">메인 페이지 리뉴얼</h3>
-            <div class="project-detail">
-              <h4 class="project-detail-title">Overview</h4>
-              <ul class="project-detail-list">
-                <li class="project-detail-item">
-                  <i class="icon-twinkle"></i>
-                  비즈니스 방향 전환에 따른 전면적인 UI 개편 진행.
-                </li>
-                <li class="project-detail-item">
-                  <i class="icon-twinkle"></i>
-                  하드코딩 되어 있던 섹션을 제거하고 API를 통해 받아온 데이터를
-                  통해 자사 포트폴리오 및 상품 리스트 노출.
-                </li>
-              </ul>
-            </div>
-            <div class="project-detail">
-              <h4 class="project-detail-title">Results & Lessons Learned</h4>
-              <ul class="project-detail-list">
-                <li class="project-detail-item">
-                  <h5>1. UI 개편에 따른 리액트 컴포넌트 개발</h5>
-                  <ul>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      버튼, 타이포그라피와 같은 가장 작은 단위의 컴포넌트 개발
-                      시 재사용성을 고려하여 기능과 스타일을 분리. HTML
-                      Element의 속성을 모두 Props로 전달하여 ‘스타일이 입혀진
-                      HTML Element’ 처럼 사용할 수 있도록 지원.
-                    </li>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      아코디언, 탭 메뉴와 같은 컴포넌트 구현 시 컴파운트 패턴을
-                      통해 prop drilling을 피하고 유연하게 UI를 조합할 수 있도록
-                      지원하여 코드 확장성을 높임.
-                    </li>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      상품 카드 컴포넌트 개발 시 페이지, 섹션에 따라 구성 요소가
-                      조금씩 달라져 컴포넌트의 복잡성 증가. 아토믹 디자인 패턴
-                      도입하여 분리한 컴포넌트를 조합하는 방식으로 코드 복잡성을
-                      낮추고 재사용성을 높임.
-                    </li>
-                  </ul>
-                </li>
-                <li class="project-detail-item">
-                  <h5>2. 브라우저 렌더링 최적화 및 사용자 경험 개선</h5>
-                  <ul>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      데이터 로딩 시 스켈레톤 UI를 통해 Layout Shift를 방지하여
-                      브라우저 렌더링 성능을 최적화.
-                    </li>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      로딩 UI를 통해 현재 페이지에서 진행 중인 작업을 사용자에게
-                      명확히 전달하여 사용자 경험을 개선하고 페이지 이탈 방지.
-                    </li>
-                  </ul>
-                </li>
-                <li class="project-detail-item">
-                  <h5>3. 커뮤니케이션</h5>
-                  <ul>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      디자이너님이 HTML, CSS에 대한 이해도가 높아 원활한
-                      커뮤니케이션을 통해 디자인과 개발이 일관되게 적용될 수
-                      있도록 조율할 수 있었음.
-                    </li>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      타 직군과의 원활한 의사소통을 통해 스토리북을 도입하여
-                      컴포넌트 구현 사항 공유.
-                    </li>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      해당 프로젝트를 통해 타 직군과의 원활한 의사소통을 위한
-                      지식의 중요성을 인식. 이후 개인 프로젝트로 Express API
-                      서버를 구축해보며 백엔드 지식을 학습하여 전반적인 개발
-                      프로세스에 대한 이해도를 높임.
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-          </article>
-          <article class="project-box">
-            <h3 class="project-box-title">토너먼트 이벤트 페이지 제작</h3>
-            <div class="project-detail">
-              <h4 class="project-detail-title">Overview</h4>
-              <ul class="project-detail-list">
-                <li class="project-detail-item">
-                  <i class="icon-twinkle"></i>
-                  자사 인테리어 포트폴리오 노출 및 공유하기를 통한 바이럴
-                  마케팅을 목적으로 한 이상형 월드컵 토너먼트 페이지 제작.
-                </li>
-                <li class="project-detail-item">
-                  <i class="icon-twinkle"></i>
-                  API를 통해 전달받은 16개의 인테리어 포트폴리오 사진을 랜덤으로
-                  토너먼트 매치한 후 최종 결과 페이지로 랜딩시키는 작업 진행.
-                </li>
-                <li class="project-detail-item">
-                  <i class="icon-twinkle"></i>
-                  결과 페이지에서 최종으로 선택한 인테리어에 사용된 상품 정보와
-                  연관있는 포트폴리오 이미지를 노출하고, 링크, 카카오톡을 통한
-                  공유하기 기능을 지원함.
-                </li>
-              </ul>
-            </div>
-            <div class="project-detail">
-              <h4 class="project-detail-title">Results & Lessons Learned</h4>
-              <ul class="project-detail-list">
-                <li class="project-detail-item">
-                  <h5>1. 이상형 월드컵 토너먼트 로직 구현</h5>
-                </li>
-                <li class="project-detail-item">
-                  <h5>2. 액션 기반의 상태 관리를 통한 렌더링 최적화</h5>
-                  <ul>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      초기 작업 시 서로 의존성이 있는 상태를 useState로 관리하여
-                      useEffect가 남발되어 빈번한 리렌더링이 발생.
-                    </li>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      useReducer를 사용하여 토너먼트 중인 포트폴리오 선택,
-                      라운드 변경 등 액션에 따라 상태를 관리.
-                    </li>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      불필요한 상태를 제거하고 코드 구조를 단순화하며 코드의
-                      가독성을 향상시키고 렌더링 최적화.
-                    </li>
-                  </ul>
-                </li>
-                <li class="project-detail-item">
-                  <h5>3. 사용자 경험 개선</h5>
-                  <ul>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      토너먼트 매치 시 사용자가 선택한 포트폴리오를 명확히
-                      인지할 수 있도록 애니메이션 효과를 제안하고, framer
-                      motion을 사용하여 애니메이션을 구현.
-                    </li>
-                  </ul>
-                </li>
-                <li class="project-detail-item">
-                  <h5>4. 목적에 따른 코드 분리를 통한 개발 생산성 향상</h5>
-                  <ul>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      이전 프로젝트에서 공유하기 기능을 커스텀 훅으로 분리해두어
-                      해당 프로젝트에서 빠르게 공유하기 기능을 적용.
-                    </li>
-                  </ul>
-                </li>
-              </ul>
+            <div class="project-box-content">
+              <h3 class="project-box-title">메인 페이지 리뉴얼</h3>
+              <div class="project-detail">
+                <h4 class="project-detail-title">Overview</h4>
+                <ul class="project-detail-list">
+                  <li class="project-detail-item">
+                    <i class="icon-twinkle"></i>
+                    비즈니스 방향 전환에 따른 전면적인 UI 개편 진행.
+                  </li>
+                  <li class="project-detail-item">
+                    <i class="icon-twinkle"></i>
+                    하드코딩 되어 있던 섹션을 제거하고 API를 통해 받아온
+                    데이터를 통해 자사 포트폴리오 및 상품 리스트 노출.
+                  </li>
+                </ul>
+              </div>
+              <div class="project-detail">
+                <h4 class="project-detail-title">Results & Lessons Learned</h4>
+                <ul class="project-detail-list">
+                  <li class="project-detail-item">
+                    <h5>1. UI 개편에 따른 리액트 컴포넌트 개발</h5>
+                    <ul>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        버튼, 타이포그라피와 같은 가장 작은 단위의 컴포넌트 개발
+                        시 재사용성을 고려하여 기능과 스타일을 분리. HTML
+                        Element의 속성을 모두 Props로 전달하여 ‘스타일이 입혀진
+                        HTML Element’ 처럼 사용할 수 있도록 지원.
+                      </li>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        아코디언, 탭 메뉴와 같은 컴포넌트 구현 시 컴파운트
+                        패턴을 통해 prop drilling을 피하고 유연하게 UI를 조합할
+                        수 있도록 지원하여 코드 확장성을 높임.
+                      </li>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        상품 카드 컴포넌트 개발 시 페이지, 섹션에 따라 구성
+                        요소가 조금씩 달라져 컴포넌트의 복잡성 증가. 아토믹
+                        디자인 패턴 도입하여 분리한 컴포넌트를 조합하는 방식으로
+                        코드 복잡성을 낮추고 재사용성을 높임.
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="project-detail-item">
+                    <h5>2. 브라우저 렌더링 최적화 및 사용자 경험 개선</h5>
+                    <ul>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        데이터 로딩 시 스켈레톤 UI를 통해 Layout Shift를
+                        방지하여 브라우저 렌더링 성능을 최적화.
+                      </li>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        로딩 UI를 통해 현재 페이지에서 진행 중인 작업을
+                        사용자에게 명확히 전달하여 사용자 경험을 개선하고 페이지
+                        이탈 방지.
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="project-detail-item">
+                    <h5>3. 커뮤니케이션</h5>
+                    <ul>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        디자이너님이 HTML, CSS에 대한 이해도가 높아 원활한
+                        커뮤니케이션을 통해 디자인과 개발이 일관되게 적용될 수
+                        있도록 조율할 수 있었음.
+                      </li>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        타 직군과의 원활한 의사소통을 통해 스토리북을 도입하여
+                        컴포넌트 구현 사항 공유.
+                      </li>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        해당 프로젝트를 통해 타 직군과의 원활한 의사소통을 위한
+                        지식의 중요성을 인식. 이후 개인 프로젝트로 Express API
+                        서버를 구축해보며 백엔드 지식을 학습하여 전반적인 개발
+                        프로세스에 대한 이해도를 높임.
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
             </div>
           </article>
           <article class="project-box">
-            <h3 class="project-box-title">
-              독서 기록 플랫폼 Chak (개인 프로젝트)
-            </h3>
-            <div class="project-detail">
-              <h4 class="project-detail-title">Overview</h4>
-              <ul class="project-detail-list">
-                <li class="project-detail-item">
-                  <i class="icon-twinkle"></i>
-                  책에 관련된 기록을 쉽게 남길 수 있는 독서 기록 플랫폼 구현.
-                </li>
-                <li class="project-detail-item">
-                  <i class="icon-twinkle"></i>
-                  로그인을 통해 인증된 사용자가 독서 기록을 생성, 수정, 조회,
-                  삭제할 수 있도록 지원함.
-                </li>
-                <li class="project-detail-item">
-                  <i class="icon-twinkle"></i>
-                  책 정보를 손수 기입하지 않아도 되도록 책 검색 기능을 통해 책
-                  정보 자동 기입 기능 제공.
-                </li>
-              </ul>
+            <div class="project-box-content">
+              <h3 class="project-box-title">토너먼트 이벤트 페이지 제작</h3>
+              <div class="project-detail">
+                <h4 class="project-detail-title">Overview</h4>
+                <ul class="project-detail-list">
+                  <li class="project-detail-item">
+                    <i class="icon-twinkle"></i>
+                    자사 인테리어 포트폴리오 노출 및 공유하기를 통한 바이럴
+                    마케팅을 목적으로 한 이상형 월드컵 토너먼트 페이지 제작.
+                  </li>
+                  <li class="project-detail-item">
+                    <i class="icon-twinkle"></i>
+                    API를 통해 전달받은 16개의 인테리어 포트폴리오 사진을
+                    랜덤으로 토너먼트 매치한 후 최종 결과 페이지로 랜딩시키는
+                    작업 진행.
+                  </li>
+                  <li class="project-detail-item">
+                    <i class="icon-twinkle"></i>
+                    결과 페이지에서 최종으로 선택한 인테리어에 사용된 상품
+                    정보와 연관있는 포트폴리오 이미지를 노출하고, 링크,
+                    카카오톡을 통한 공유하기 기능을 지원함.
+                  </li>
+                </ul>
+              </div>
+              <div class="project-detail">
+                <h4 class="project-detail-title">Results & Lessons Learned</h4>
+                <ul class="project-detail-list">
+                  <li class="project-detail-item">
+                    <h5>1. 이상형 월드컵 토너먼트 로직 구현</h5>
+                  </li>
+                  <li class="project-detail-item">
+                    <h5>2. 액션 기반의 상태 관리를 통한 렌더링 최적화</h5>
+                    <ul>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        초기 작업 시 서로 의존성이 있는 상태를 useState로
+                        관리하여 useEffect가 남발되어 빈번한 리렌더링이 발생.
+                      </li>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        useReducer를 사용하여 토너먼트 중인 포트폴리오 선택,
+                        라운드 변경 등 액션에 따라 상태를 관리.
+                      </li>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        불필요한 상태를 제거하고 코드 구조를 단순화하며 코드의
+                        가독성을 향상시키고 렌더링 최적화.
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="project-detail-item">
+                    <h5>3. 사용자 경험 개선</h5>
+                    <ul>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        토너먼트 매치 시 사용자가 선택한 포트폴리오를 명확히
+                        인지할 수 있도록 애니메이션 효과를 제안하고, framer
+                        motion을 사용하여 애니메이션을 구현.
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="project-detail-item">
+                    <h5>4. 목적에 따른 코드 분리를 통한 개발 생산성 향상</h5>
+                    <ul>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        이전 프로젝트에서 공유하기 기능을 커스텀 훅으로
+                        분리해두어 해당 프로젝트에서 빠르게 공유하기 기능을
+                        적용.
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
             </div>
-            <div class="project-detail">
-              <h4 class="project-detail-title">Results & Lessons Learned</h4>
-              <ul class="project-detail-list">
-                <li class="project-detail-item">
-                  <h5>
-                    1. 공통 컴포넌트를 재사용하기 위한 리액트 UI 라이브러리 구현
-                    <a href="https://github.com/ysisys0202/chak-blocks"
-                      >(깃허브 보러가기)</a
-                    >
-                  </h5>
-                </li>
-                <li class="project-detail-item">
-                  <h5>
-                    2. 독서 기록을 위한 클라이언트 화면 개발
-                    <a href="https://github.com/ysisys0202/chak-client"
-                      >(깃허브 보러가기)</a
-                    >
-                  </h5>
-                  <ul>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      Next.js App Router 방식을 통해 페이지 최초 렌더링 이후
-                      인터랙션에 걸리는 시간 최적화 및 데이터 캐싱을 통한 API
-                      호출 최적화.
-                    </li>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      JWT을 통한 사용자 인증 구현.
-                    </li>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      React Hook Form과 Zod를 사용하여 데이터 입력 Form 개발.
-                    </li>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      React Query의 useInfinityQuery를 사용한 무한 스크롤 구현.
-                    </li>
-                    <li>
-                      <i class="icon-twinkle"></i>
-                      페이지 이동 시 딜레이가 생겨 Next.js의 스트리밍을 사용하여
-                      최적화.
-                    </li>
-                  </ul>
-                </li>
-                <li class="project-detail-item">
-                  <h5>
-                    3. 데이터 통신을 위한 express 서버 구축
-                    <a href="https://github.com/ysisys0202/chak-api"
-                      >(깃허브 보러가기)</a
-                    >
-                  </h5>
-                </li>
-              </ul>
+          </article>
+          <article class="project-box">
+            <div class="project-box-content">
+              <h3 class="project-box-title">
+                독서 기록 플랫폼 Chak (개인 프로젝트)
+              </h3>
+              <div class="project-detail">
+                <h4 class="project-detail-title">Overview</h4>
+                <ul class="project-detail-list">
+                  <li class="project-detail-item">
+                    <i class="icon-twinkle"></i>
+                    책에 관련된 기록을 쉽게 남길 수 있는 독서 기록 플랫폼 구현.
+                  </li>
+                  <li class="project-detail-item">
+                    <i class="icon-twinkle"></i>
+                    로그인을 통해 인증된 사용자가 독서 기록을 생성, 수정, 조회,
+                    삭제할 수 있도록 지원함.
+                  </li>
+                  <li class="project-detail-item">
+                    <i class="icon-twinkle"></i>
+                    책 정보를 손수 기입하지 않아도 되도록 책 검색 기능을 통해 책
+                    정보 자동 기입 기능 제공.
+                  </li>
+                </ul>
+              </div>
+              <div class="project-detail">
+                <h4 class="project-detail-title">Results & Lessons Learned</h4>
+                <ul class="project-detail-list">
+                  <li class="project-detail-item">
+                    <h5>
+                      1. 공통 컴포넌트를 재사용하기 위한 리액트 UI 라이브러리
+                      구현
+                      <a href="https://github.com/ysisys0202/chak-blocks"
+                        >(깃허브 보러가기)</a
+                      >
+                    </h5>
+                  </li>
+                  <li class="project-detail-item">
+                    <h5>
+                      2. 독서 기록을 위한 클라이언트 화면 개발
+                      <a href="https://github.com/ysisys0202/chak-client"
+                        >(깃허브 보러가기)</a
+                      >
+                    </h5>
+                    <ul>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        Next.js App Router 방식을 통해 페이지 최초 렌더링 이후
+                        인터랙션에 걸리는 시간 최적화 및 데이터 캐싱을 통한 API
+                        호출 최적화.
+                      </li>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        JWT을 통한 사용자 인증 구현.
+                      </li>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        React Hook Form과 Zod를 사용하여 데이터 입력 Form 개발.
+                      </li>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        React Query의 useInfinityQuery를 사용한 무한 스크롤
+                        구현.
+                      </li>
+                      <li>
+                        <i class="icon-twinkle"></i>
+                        페이지 이동 시 딜레이가 생겨 Next.js의 스트리밍을
+                        사용하여 최적화.
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="project-detail-item">
+                    <h5>
+                      3. 데이터 통신을 위한 express 서버 구축
+                      <a href="https://github.com/ysisys0202/chak-api"
+                        >(깃허브 보러가기)</a
+                      >
+                    </h5>
+                  </li>
+                </ul>
+              </div>
             </div>
           </article>
         </div>
