✨ blog 애니메이션 추가

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           <h2 class="section-title bounce-text">Blog</h2>
         </header>
         <div class="section-body">
-          <div class="blog-intro">
+          <div class="blog-intro fadein-item">
             <p class="main-text">
               개발자로서 지속적으로 발전하기 위해
               <br />
