✨ ending 애니메이션 추가

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
           </div>
         </div>
       </section>
-      <section class="section ending">
+      <section class="section ending fadein-item">
         <h2 class="section-title">
           Thank you for visiting!
           <br />
