📝 마크업 업데이트

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
         <svg
           class="path"
           width="1200"
-          height="6684"
-          viewBox="0 0 1200 6684"
+          height="6744"
+          viewBox="0 0 1200 6744"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
         >
           <path
-            d="M788 6637C788 6637 1082.64 6624.5 1054 6378.5C1034.5 6211 884.328 6223.5 595.328 6134C306.328 6044.5 192.828 5948 176.828 5761.5C160.828 5575 278.328 5462 401.328 5384.5C524.328 5307 804.828 5067.5 832.328 4922C859.828 4776.5 781.328 4474.5 472.328 4324C163.328 4173.5 153.328 3775 375.828 3652C598.328 3529 872.828 3304.5 837.328 3072.5C801.828 2840.5 444.829 2607 356.329 2564C267.829 2521 9.8286 2351.5 87.3286 2084.5C164.829 1817.5 403.329 1819 628.829 1746.5C854.329 1674 815.329 1511 540.329 1423.5C265.329 1336 336.329 998.5 540.329 912C744.329 825.5 1033.83 641.5 982.829 387.5C967.386 304.167 897.8 135.4 743 127"
+            d="M768 6718C768 6718 1082.64 6624.5 1054 6378.5C1034.5 6211 884.328 6223.5 595.328 6134C306.328 6044.5 192.828 5948 176.828 5761.5C160.828 5575 278.328 5462 401.328 5384.5C524.328 5307 804.828 5067.5 832.328 4922C859.828 4776.5 781.328 4474.5 472.328 4324C163.328 4173.5 153.328 3775 375.828 3652C598.328 3529 872.828 3304.5 837.328 3072.5C801.828 2840.5 444.829 2607 356.329 2564C267.829 2521 9.8286 2351.5 87.3286 2084.5C164.829 1817.5 403.329 1819 628.829 1746.5C854.329 1674 815.329 1511 540.329 1423.5C265.329 1336 336.329 998.5 540.329 912C744.329 825.5 1033.83 641.5 982.829 387.5C967.386 304.167 897.8 135.4 743 127"
             stroke="black"
           />
         </svg>
@@ -77,50 +77,62 @@
           </h3>
           <div class="about-item-area">
             <article class="about-item fadein-item">
-              <h4 class="about-item-title">Lorem ipsum dolor sit amet</h4>
+              <h4 class="about-item-title">빠르게 배우고 성장합니다.</h4>
               <p class="about-item-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Curabitur ultrices, leo vitae vehicula commodo, libero nibh
-                aliquet ligula, id malesuada quam risus vel odio. Donec in metus
-                sodales, vulputate felis feugiat, rutrum nunc. Maecenas et
-                mauris sem. Nulla facilisi. Etiam in pretium metus. Mauris sit
-                amet turpis in sapien dictum mattis quis at ante.
+                운영 중인 서비스의 프론트엔드 개발 환경을 React와 Next.js로
+                마이그레이션 하는 과정에 참여하여 기술을 빠르게 습득하고 적용한
+                경험이 있습니다. 기존 HTML, CSS, Javascript로 구성된 코드를
+                컴포넌트 기반으로 모듈화하는 과정을 통해 코드의 재사용성과
+                유지보수성을 높일 수 있었습니다. 이 과정에서 프론트엔드 기술의
+                변천사를 몸소 체험하며 성장할 기회를 가질 수 있었습니다.
                 <br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Curabitur ultrices, leo vitae vehicula commodo, libero nibh
-                aliquet ligula, id malesuada quam risus vel odio. Donec in metus
-                sodales, vulputate felis feugiat, rutrum nunc. Maecenas et
-                mauris sem. Nulla facilisi. Etiam in pretium metus. Mauris sit
-                amet turpis in sapien dictum mattis quis at ante.
+                <br />
+                특히, 공부한 내용을 바로 서비스에 적용하는 경험을 통해 저의
+                배움이 개인의 성장에서 그치는 것이 아니라 팀과 서비스에 기여할
+                수 있음에 큰 즐거움을 느꼈습니다. 그 즐거움이 다시 배움의 동력이
+                되는 선순환을 통해 꾸준히 발전하는 개발자로 성장할 수
+                있었습니다.
               </p>
             </article>
             <article class="about-item fadein-item">
-              <h4 class="about-item-title">Lorem ipsum dolor sit amet</h4>
+              <h4 class="about-item-title">
+                인터랙션을 통해 사용성을 개선하고,
+
+                <br />서비스를 브랜딩합니다.
+              </h4>
               <p class="about-item-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Curabitur ultrices, leo vitae vehicula commodo, libero nibh
-                aliquet ligula, id malesuada quam risus vel odio. Donec in metus
-                sodales, vulputate felis feugiat, rutrum nunc. Maecenas et
-                mauris sem. Nulla facilisi. Etiam in pretium metus. Mauris sit
-                amet turpis in sapien dictum mattis quis at ante.
+                프론트엔드 개발의 즐거움은 코드로 화면을 구현하는 데 있다고
+                생각합니다. 특히 작은 움직임으로 사용자 행동에 피드백을 줄 수
+                있는 마이크로 인터랙션에 관심이 많습니다. 실제로 웹, 앱을
+                사용하며 흥미로운 인터랙션을 기억해 두고 서비스에 적용하여
+                사용성을 개선하였습니다.
                 <br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Curabitur ultrices, leo vitae vehicula commodo, libero nibh
-                aliquet ligula, id malesuada quam risus vel odio. Donec in metus
-                sodales, vulputate felis feugiat, rutrum nunc. Maecenas et
-                mauris sem. Nulla facilisi. Etiam in pretium metus. Mauris sit
-                amet turpis in sapien dictum mattis quis at ante.
+                <br />
+                또한, 다양한 인터랙션을 통해 서비스를 표현하는 작업에 큰 흥미를
+                가지고 있습니다. 프리미엄 컨설팅 서비스 런칭 시 스크롤 기반의
+                인터랙션을 적용하여 서비스 브랜딩에 기여하였으며, 다양한
+                프로모션 페이지에서 인터랙션을 제안하고 적용하여 사용자의 흥미를
+                유발한 경험이 있습니다.
               </p>
             </article>
             <article class="about-item fadein-item">
-              <h4 class="about-item-title">Lorem ipsum dolor sit amet</h4>
+              <h4 class="about-item-title">같은 목표를 바라보고 성취합니다.</h4>
               <p class="about-item-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Curabitur ultrices, leo vitae vehicula commodo, libero nibh
-                aliquet ligula, id malesuada quam risus vel odio. Donec in metus
-                sodales, vulputate felis feugiat, rutrum nunc. Maecenas et
-                mauris sem. Nulla facilisi. Etiam in pretium metus. Mauris sit
-                amet turpis in sapien dictum mattis quis at ante.
+                개발의 목적은 서비스가 의도대로 사용자에게 전달되는 것에 있다고
+                생각합니다. 의도를 담는 과정에서 어긋남이 발생하지 않도록
+                지속적인 의사소통을 통해 서비스를 바라보는 시선을 맞추며
+                작업합니다.
+                <br />
+                <br />
+                이런 과정에서 비개발 직군과의 원활한 의사소통을 위해 스토리북을
+                도입하여 리액트 컴포넌트 구현 사항을 공유하였고, 또한 협업에
+                있어 다른 직군에 대한 지식의 필요성을 크게 체감하여 Express로
+                API 서버를 직접 구축해 보며 백엔드 지식을 학습하였습니다.
+                <br />
+                <br />
+                개발자이기 전에 함께 목표를 이루어나가는 동료로서 원활한 협업을
+                위해 끊임없이 소통하며, 필요한 지식이 있다면 적극적으로 학습하여
+                팀과 서비스에 기여하기 위해 노력하고 있습니다.
               </p>
             </article>
           </div>
@@ -264,9 +276,9 @@
                     <ul>
                       <li>
                         <i class="icon-twinkle"></i>
-                        디자이너님이 HTML, CSS에 대한 이해도가 높아 원활한
-                        커뮤니케이션을 통해 디자인과 개발이 일관되게 적용될 수
-                        있도록 조율할 수 있었음.
+                        함께 프로젝트를 진행한 디자이너님께서 HTML, CSS에 대한
+                        이해도가 높아 원활한 커뮤니케이션을 통해 디자인과 개발이
+                        일관되게 적용될 수 있도록 조율할 수 있었음.
                       </li>
                       <li>
                         <i class="icon-twinkle"></i>
@@ -276,7 +288,7 @@
                       <li>
                         <i class="icon-twinkle"></i>
                         해당 프로젝트를 통해 타 직군과의 원활한 의사소통을 위한
-                        지식의 중요성을 인식. 이후 개인 프로젝트로 Express API
+                        지식의 중요성 인식. 이후 개인 프로젝트에서 Express로 API
                         서버를 구축해보며 백엔드 지식을 학습하여 전반적인 개발
                         프로세스에 대한 이해도를 높임.
                       </li>
@@ -343,8 +355,8 @@
                       <li>
                         <i class="icon-twinkle"></i>
                         토너먼트 매치 시 사용자가 선택한 포트폴리오를 명확히
-                        인지할 수 있도록 애니메이션 효과를 제안하고, framer
-                        motion을 사용하여 애니메이션을 구현.
+                        인지할 수 있도록 애니메이션 효과를 제안하고, Framer
+                        Motion을 사용하여 애니메이션 구현.
                       </li>
                     </ul>
                   </li>
@@ -355,7 +367,7 @@
                         <i class="icon-twinkle"></i>
                         이전 프로젝트에서 공유하기 기능을 커스텀 훅으로
                         분리해두어 해당 프로젝트에서 빠르게 공유하기 기능을
-                        적용.
+                        적용하여 작업 시간 단축.
                       </li>
                     </ul>
                   </li>
