--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </p>
         </header>
         <div class="intro-body">
-          <img src="./assets/intro-BL3ccC_O.jpg" alt="바다 이미지" />
+          <img src="./assets/intro-CdjdNuqP.jpg" alt="바다 이미지" />
         </div>
       </section>
       <div class="route">
