📝 project 업데이트 및 링크 연결

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <svg
           class="path"
           width="1200"
-          height="6744"
-          viewBox="0 0 1200 6744"
+          height="7042"
+          viewBox="0 0 1200 7042"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
         >
           <path
-            d="M768 6718C768 6718 1082.64 6624.5 1054 6378.5C1034.5 6211 884.328 6223.5 595.328 6134C306.328 6044.5 192.828 5948 176.828 5761.5C160.828 5575 278.328 5462 401.328 5384.5C524.328 5307 804.828 5067.5 832.328 4922C859.828 4776.5 781.328 4474.5 472.328 4324C163.328 4173.5 153.328 3775 375.828 3652C598.328 3529 872.828 3304.5 837.328 3072.5C801.828 2840.5 444.829 2607 356.329 2564C267.829 2521 9.8286 2351.5 87.3286 2084.5C164.829 1817.5 403.329 1819 628.829 1746.5C854.329 1674 815.329 1511 540.329 1423.5C265.329 1336 336.329 998.5 540.329 912C744.329 825.5 1033.83 641.5 982.829 387.5C967.386 304.167 897.8 135.4 743 127"
+            d="M982.829 387.5C983.021 388.458 983.209 389.415 983.392 390.37M778.5 6881.5C778.5 6881.5 1167.64 6867 1139 6621C1119.5 6453.5 884.328 6362.5 595.328 6273C306.328 6183.5 114 6096.5 98 5910C82 5723.5 278.328 5462 401.328 5384.5C524.328 5307 804.828 5067.5 832.328 4922C859.828 4776.5 781.328 4474.5 472.328 4324C163.328 4173.5 153.328 3775 375.828 3652C598.328 3529 872.828 3304.5 837.328 3072.5C801.828 2840.5 444.829 2607 356.329 2564C267.829 2521 9.8286 2351.5 87.3286 2084.5C164.829 1817.5 403.329 1819 628.829 1746.5C854.329 1674 815.329 1511 540.329 1423.5C265.329 1336 336.329 998.5 540.329 912C743.56 825.826 1031.65 642.886 983.392 390.37M983.392 390.37C977.094 331.747 929.3 200.2 788.5 143"
             stroke="black"
           />
         </svg>
@@ -378,7 +378,26 @@
             <div class="project-box-content">
               <h3 class="project-box-title">
                 독서 기록 플랫폼 Chak (개인 프로젝트)
+                <a href="https://chak-client.vercel.app/" target="_blank"
+                  >(프로젝트 보러가기)</a
+                >
               </h3>
+
+              <p class="notice">
+                * 회원 전용 사이트로 회원가입 후 로그인해야 이용할 수 있습니다.
+                <br />
+                아래 테스트 계정을 사용하여 빠르게 확인해보세요.
+              </p>
+              <table>
+                <tr>
+                  <th>테스트 계정</th>
+                  <td>tester01</td>
+                </tr>
+                <tr>
+                  <th>비밀번호</th>
+                  <td>password</td>
+                </tr>
+              </table>
               <div class="project-detail">
                 <h4 class="project-detail-title">Overview</h4>
                 <ul class="project-detail-list">
@@ -405,7 +424,9 @@
                     <h5>
                       1. 공통 컴포넌트를 재사용하기 위한 리액트 UI 라이브러리
                       구현
-                      <a href="https://github.com/ysisys0202/chak-blocks"
+                      <a
+                        href="https://github.com/ysisys0202/chak-blocks"
+                        target="_blank"
                         >(깃허브 보러가기)</a
                       >
                     </h5>
@@ -413,7 +434,9 @@
                   <li class="project-detail-item">
                     <h5>
                       2. 독서 기록을 위한 클라이언트 화면 개발
-                      <a href="https://github.com/ysisys0202/chak-client"
+                      <a
+                        href="https://github.com/ysisys0202/chak-client"
+                        target="_blank"
                         >(깃허브 보러가기)</a
                       >
                     </h5>
@@ -447,7 +470,9 @@
                   <li class="project-detail-item">
                     <h5>
                       3. 데이터 통신을 위한 express 서버 구축
-                      <a href="https://github.com/ysisys0202/chak-api"
+                      <a
+                        href="https://github.com/ysisys0202/chak-api"
+                        target="_blank"
                         >(깃허브 보러가기)</a
                       >
                     </h5>
@@ -470,14 +495,17 @@
               배운 지식을 기록하고 <br />개발 과정 속에서 겪은 어려움과 해결
               방법을 공유하기 위한 <br />기술 블로그를 운영하고 있습니다.
             </p>
-            <span class="view-more"
+            <a class="view-more" href="https://www.yun-log.com/" target="_blank"
               >블로그 보러가기
               <i class="icon-arrow"></i>
-            </span>
+            </a>
           </div>
           <div class="blog-card-area">
             <article class="blog-card">
-              <a href="">
+              <a
+                href="https://www.yun-log.com/posts/%ED%9A%8C%EA%B3%A0/UI-%EB%9D%BC%EC%9D%B4%EB%B8%8C%EB%9F%AC%EB%A6%AC-%EC%A0%9C%EC%9E%91%EA%B8%B0"
+                target="_blank"
+              >
                 <i class="icon-react"></i>
                 <div class="content-area">
                   <h3 class="blog-card-title">UI-라이브러리-제작기</h3>
@@ -491,7 +519,10 @@
               </a>
             </article>
             <article class="blog-card">
-              <a href="">
+              <a
+                href="https://www.yun-log.com/posts/Next/%EC%8A%A4%ED%8A%B8%EB%A6%AC%EB%B0%8D-%EC%A0%81%EC%9A%A9%ED%95%B4%EC%84%9C-%EB%9D%BC%EC%9A%B0%ED%8C%85-%EC%86%8D%EB%8F%84-%EA%B0%9C%EC%84%A0%ED%95%98%EA%B8%B0"
+                target="_blank"
+              >
                 <i class="icon-next"></i>
                 <div class="content-area">
                   <h3 class="blog-card-title">
@@ -507,7 +538,10 @@
               </a>
             </article>
             <article class="blog-card">
-              <a href="">
+              <a
+                href="https://www.yun-log.com/posts/Next/%EB%84%A5%EC%8A%A4%ED%8A%B8-%EC%84%9C%EB%B2%84-%EC%82%AC%EC%9D%B4%EB%93%9C%EC%97%90%EC%84%9C-%EC%BF%A0%ED%82%A4%EC%97%90-%EC%A0%91%EA%B7%BC%ED%95%98%EA%B8%B0"
+                target="_blank"
+              >
                 <i class="icon-next"></i>
                 <div class="content-area">
                   <h3 class="blog-card-title">
@@ -525,7 +559,10 @@
               </a>
             </article>
             <article class="blog-card">
-              <a href="">
+              <a
+                href="https://www.yun-log.com/posts/CSS/margin-left-auto-%EC%A0%81%EC%9A%A9%ED%95%98%EA%B8%B0"
+                target="_blank"
+              >
                 <i class="icon-paint"></i>
                 <div class="content-area">
                   <h3 class="blog-card-title">margin-left : auto 적용하기</h3>
@@ -539,7 +576,10 @@
               </a>
             </article>
             <article class="blog-card">
-              <a href="">
+              <a
+                href="https://www.yun-log.com/posts/CSS/focuswithin-%EC%84%A0%ED%83%9D%EC%9E%90%EB%A1%9C-%ED%8F%BC-%ED%95%84%EB%93%9C%EC%97%90-%EC%9D%B8%ED%84%B0%EB%9E%99%EC%85%98-%EC%B6%94%EA%B0%80%ED%95%98%EA%B8%B0"
+                target="_blank"
+              >
                 <i class="icon-paint"></i>
                 <div class="content-area">
                   <h3 class="blog-card-title">
@@ -558,7 +598,10 @@
               </a>
             </article>
             <article class="blog-card">
-              <a href="">
+              <a
+                href="https://www.yun-log.com/posts/Browser/%EC%A3%BC%EC%9A%94-%EB%A0%8C%EB%8D%94%EB%A7%81-%EA%B2%BD%EB%A1%9C-%EC%95%8C%EC%95%84%EB%B3%B4%EA%B8%B0"
+                target="_blank"
+              >
                 <i class="icon-internet"></i>
                 <div class="content-area">
                   <h3 class="blog-card-title">주요 렌더링 경로 알아보기</h3>
@@ -571,7 +614,10 @@
               </a>
             </article>
             <article class="blog-card">
-              <a href="">
+              <a
+                href="https://www.yun-log.com/posts/React/ErrorBoundary%EB%A1%9C-%EC%97%90%EB%9F%AC-%ED%95%B8%EB%93%A4%EB%A7%81%ED%95%98%EA%B8%B0"
+                target="_blank"
+              >
                 <i class="icon-react"></i>
                 <div class="content-area">
                   <h3 class="blog-card-title">
@@ -588,7 +634,10 @@
               </a>
             </article>
             <article class="blog-card">
-              <a href="">
+              <a
+                href="https://www.yun-log.com/posts/Javascript/%EC%93%B0%EB%A1%9C%ED%8B%80%EA%B3%BC-%EB%94%94%EB%B0%94%EC%9A%B4%EC%8A%A4%EB%A1%9C%20-%EC%9D%B4%EB%B2%A4%ED%8A%B8-%EC%B5%9C%EC%A0%81%ED%99%94-%ED%95%98%EA%B8%B0"
+                target="_blank"
+              >
                 <i class="icon-cogwheel"></i>
                 <div class="content-area">
                   <h3 class="blog-card-title">
